--- a/package.json
+++ b/package.json
@@ -7,12 +7,19 @@
     "ios": "react-native run-ios",
     "lint": "eslint .",
     "start": "react-native start",
-    "test": "jest"
+    "test": "jest",
+    "build:android": "./android/gradlew assembleRelease"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^1.19.8",
+    "@react-native-community/netinfo": "^11.1.0",
+    "@react-navigation/native": "^6.1.9",
     "axios": "^1.6.2",
     "react": "18.2.0",
-    "react-native": "0.72.7"
+    "react-native": "0.72.7",
+    "react-native-safe-area-context": "^4.7.4",
+    "react-native-screens": "^3.27.0",
+    "react-native-simple-toast": "^3.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
