--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "aaa": "yarn start  --reset-cache"
   },
   "dependencies": {
+    "@nutui/nutui-react-native": "^0.0.8",
     "@react-native-async-storage/async-storage": "^1.19.8",
     "@react-native-community/netinfo": "^11.1.0",
     "@react-navigation/native": "^6.1.9",
