--- a/package.json
+++ b/package.json
@@ -9,20 +9,22 @@
     "start": "react-native start",
     "test": "jest",
     "build:android": "./android/gradlew assembleRelease",
-    "aaa": "yarn start  --reset-cache"
+    "aaa": "yarn start --reset-cache"
   },
   "dependencies": {
-    "@nutui/nutui-react-native": "^0.0.8",
     "@react-native-async-storage/async-storage": "^1.19.8",
     "@react-native-community/netinfo": "^11.1.0",
     "@react-navigation/native": "^6.1.9",
     "@react-navigation/native-stack": "^6.9.17",
+    "@rneui/base": "^4.0.0-rc.8",
+    "@rneui/themed": "^4.0.0-rc.8",
     "axios": "^1.6.2",
     "react": "18.2.0",
     "react-native": "0.72.7",
     "react-native-safe-area-context": "^4.7.4",
     "react-native-screens": "^3.27.0",
     "react-native-simple-toast": "^3.1.0",
+    "react-native-vector-icons": "^10.0.2",
     "react-query": "^3.39.3"
   },
   "devDependencies": {
