--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "react-native-screens": "^3.27.0",
     "react-native-simple-toast": "^3.1.0",
     "react-native-vector-icons": "^10.0.2",
-    "react-query": "^3.39.3"
+    "react-query": "^3.39.3",
+    "zustand": "^4.4.7"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
